dark mode bugfix

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1358,6 +1358,10 @@ background-position: 8px 8px; */
   border: none;
   background-color: transparent;
 }
+.paginationButton svg{
+  margin-top: 5px;
+  /* background-color: red; */
+}
 .paginationButton:focus {
   outline: 3px solid var(--color-focus);
   fill: var(--color-focus);
@@ -1372,14 +1376,18 @@ background-position: 8px 8px; */
 }
 .paginationPrev > .paginationButton:not(:disabled):hover svg {
   transform: translateX(-5px);
+  fill: var(--color-font-primary);
 }
 .paginationNext > .paginationButton:not(:disabled):hover svg {
   transform: translateX(5px);
+  fill: var(--color-font-primary);
 }
 .paginationIcon {
   width: 1em !important;
   height: 100% !important;
-  fill: var(--color-font-primary);
+}
+.paginationNext svg, .paginationPrev svg {
+  fill: var(--color-font-secondary);
 }
 .paginationInput {
   display: flex;
@@ -1397,11 +1405,9 @@ background-position: 8px 8px; */
   letter-spacing: -.03em;
   width: 1.8em;
   height: 1.8em;
-  font-family: 'Noto Sans Mono', monospace;
-  color: var(--color-font-primary);
-  -webkit-font-smoothing: antialiased;
+  color: var(--color-font-secondary);
   box-sizing: border-box;
-  transition: background-color 100ms ease-in-out;
+  transition: all 150ms ease-in-out;
 
   /* usuniecie cienia z input w ios (startszych?) */
   background-image: linear-gradient(transparent, transparent); 
@@ -1415,6 +1421,7 @@ background-position: 8px 8px; */
 }
 .paginationSearchInput:hover {
   font-weight: bold;
+  color: var(--color-font-primary);
   background-color: var(--color-background-secodary);
 }
 .paginationInputSeparator {
@@ -2456,7 +2463,7 @@ input[type="text"] {
   border: 1px solid var(--dark-color-border);
 }
 .RCS:hover .RCSname {
-  text-decoration: underline solid var(--dark-color-border);
+  text-decoration: underline solid var(--dark-color-font-primary);
   color: var(--dark-color-font-primary);
   border-color: var(--dark-color-font-primary);
 }
@@ -2509,7 +2516,7 @@ input[type="text"] {
   fill: var(--dark-color-font-secondary);
 }
 .pagination {
-  color: var(--dark-color-font-primary);
+  color: var(--dark-color-font-secondary);
 }
 .paginationButton:focus {
   outline: 3px solid var(--dark-color-focus);
@@ -2518,12 +2525,21 @@ input[type="text"] {
 .paginationButton:disabled .paginationIcon, .paginationButton:disabled{
   fill: var(--dark-color-disabled);
 }
+.paginationNext svg, .paginationPrev svg {
+  fill: var(--dark-color-font-secondary);
+}
+.paginationPrev > .paginationButton:not(:disabled):hover svg {
+  fill: var(--dark-color-font-primary);
+}
+.paginationNext > .paginationButton:not(:disabled):hover svg {
+  fill: var(--dark-color-font-primary);
+}
 .paginationIcon {
   fill: var(--dark-color-font-primary);
 }
 .paginationSearchInput {
   border: 1px solid var(--dark-color-border);
-  color: var(--dark-color-font-primary);
+  color: var(--dark-color-font-secondary);
 }
 .paginationSearchInput:focus {
   outline: 3px solid var(--dark-color-focus);
@@ -2532,8 +2548,7 @@ input[type="text"] {
 }
 .paginationSearchInput:hover {
   background-color: var(--dark-color-background-secodary);
-}
-.paginationInputSeparator {
+  color: var(--dark-color-font-primary);
 }
 .RCcategoryLink {
   color: var(--dark-color-font-secondary);
